--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -1,3 +1,31 @@
 #main-container {
   margin-top: 50px;
 }
+
+.navbar {
+  border: none;
+}
+
+.dropdown-menu {
+  border: none;
+  box-shadow: none;
+}
+
+.dropdown-menu > li > a {
+  margin-left: -25px;
+  padding-top: 5px;
+  padding-bottom: 10px;
+}
+
+.dropdown-menu > li > a:hover {
+  color: #337ab7;
+  background-color: #fff;
+}
+
+.navbar-collapse {
+  background-color: #fff;
+}
+
+.centered {
+  text-align: center;
+}
